[package]
name = "serialize_deserialize_u8_i32"
version = "0.1.25"
authors = ["tpmccallum <mistermac2008@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/second-state/serialize_deserialize_u8_i32"
license-file = "LICENSE"
description = "A Rust library that safely converts, back and forward, between u8 and i32"


[dependencies]



